# ClosestTrajectory

./: CMakeLists.txt  README.md  closesttrajectory.cpp  closesttrajectory.hpp  design.txt  howto.txt
include/: closesttrajectory.hpp
src/: main.cpp
